--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "coditor",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "<div align=\"center\">",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
