added mor functionality; run endpoint supports input now (server side only)

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.1.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
-    "vm2": "^3.9.19"
+    "vm2": "^3.9.19",
+    "ws": "^8.16.0"
   }
 }
