--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
